--- a/clientsyslog/apache2.conf
+++ b/clientsyslog/apache2.conf
@@ -5,4 +5,4 @@ input(type="imfile"
          Tag="http_access"
          Severity="info"
          Facility="local1")
-Local1.info        @<10.0.0.2>:514 #Redirection des logs vers le serveur Neo
+Local1.info        @<10.0.0.2>:514 #Redirection des logs
